tests/specs/ecosystem/tuhana/unocss_catppuccin/1_0_0.test
tuhana/unocss-catppuccin/1.0.0
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/extend.ts:11:14
   | 
11 | export const extendTheme = (options: ExtendOptions = {}) => {
   |              ^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


